# aircursor

./: CHANGELOG.md  README.md  main.py  pyproject.toml
docs/: architecture.md
src/: action_dispatcher.py  camera.py  config.py  cursor_controller.py  gesture_engine.py  hand_landmarks.py  hand_tracker.py  hud_renderer.py  interaction_engine.py  landmark_filter.py  main.py  pose_classifier.py  scroll_intent_engine.py
tests/: test_gesture_arbitration.py
