[project]
name = "aircursor"
version = "0.10.2"
description = "Hands-free macOS cursor control via webcam hand tracking"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mediapipe>=0.10.35",
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pyobjc-framework-quartz>=12.2.1",
]

[project.scripts]
aircursor = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.build.targets.wheel.force-include]
"src/main.py" = "main.py"
"src/config.py" = "config.py"
"src/camera.py" = "camera.py"
"src/hand_tracker.py" = "hand_tracker.py"
"src/landmark_filter.py" = "landmark_filter.py"
"src/pose_classifier.py" = "pose_classifier.py"
"src/gesture_engine.py" = "gesture_engine.py"
"src/interaction_engine.py" = "interaction_engine.py"
"src/action_dispatcher.py" = "action_dispatcher.py"
